--- a/serverless.yml
+++ b/serverless.yml
@@ -4,8 +4,8 @@ frameworkVersion: '3'
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs16.x
 
 functions:
   hello:
-    handler: handler.hello
+    handler: src/helloWorld.default
