--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@
             run: npm ci
           - name: Run unit tests
             run: npm test
-          # - name: Run INT tests
-          #   run: npm run test:int
+          - name: Run INT tests
+            run: npm run test:int
           # - name: Deploy
           #   run: npm run deploy
           # - name: Run E2E tests
