--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
-    "serverless": "^3.23.0"
+    "serverless": "^3.23.0",
+    "serverless-deployment-bucket": "^1.6.0"
   }
 }
