--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@
             run: npm test
           - name: Run INT tests
             run: npm run test:int
-          # - name: Deploy
-          #   run: npm run deploy
+          - name: Deploy
+            run: npm run deploy
           # - name: Run E2E tests
           #   run: npm run test:e2e
           #   env:
