--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "deploy": "npx sls deploy",
     "test": "npm run test:unit",
-    "test:int": "npx jest int.test --config jest.config.int.js",
+    "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
+    "test:int": "STAGE=dev npx jest int.test --config jest.config.int.js",
     "test:unit": "npx jest unit.test --config jest.config.js"
   },
   "repository": {
@@ -20,6 +21,8 @@
   },
   "homepage": "https://github.com/sls-reference-architectures/javascript-template#readme",
   "devDependencies": {
+    "@aws-sdk/client-cloudformation": "^3.188.0",
+    "axios": "^1.1.3",
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
     "serverless": "^3.23.0",
