--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jest-extended": "^3.1.0",
     "serverless": "^3.23.0",
     "serverless-deployment-bucket": "^1.6.0"
+  },
+  "dependencies": {
+    "@middy/core": "^3.6.1"
   }
 }
