--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "npx sls deploy --conceal",
+    "lint": "eslint .",
+    "lint:fix": "eslint '**.*.js' --fix",
     "test": "npm run test:unit",
     "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
     "test:int": "STAGE=dev npx jest int.test --config jest.config.int.js",
@@ -23,12 +25,18 @@
   "devDependencies": {
     "@aws-sdk/client-cloudformation": "^3.188.0",
     "axios": "^1.1.3",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-no-only-tests": "^3.0.0",
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
     "serverless": "^3.23.0",
     "serverless-deployment-bucket": "^1.6.0"
   },
   "dependencies": {
+    "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^3.6.1"
   }
 }
