--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,36 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-    # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-    name: CI & Test
+name: CI & Test
 
-    on:
-      push:
-        branches: [master]
-      schedule:
-        - cron: 0 7 * * 1-5
+on:
+  push:
+    branches: [master]
+  schedule:
+    - cron: 0 7 * * 1-5
 
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_REGION: us-east-1
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_REGION: us-east-1
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    jobs:
-      build:
-        runs-on: ubuntu-latest
-        concurrency: build-deploy-test
-        steps:
-          - uses: actions/checkout@v3
-          - name: Use Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v3
-            with:
-              node-version: "16.x"
-          - name: Install dependencies
-            run: npm ci
-          - name: Run unit tests
-            run: npm test
-          - name: Run INT tests
-            run: npm run test:int
-          - name: Deploy
-            run: npm run deploy
-          - name: Run E2E tests
-            run: npm run test:e2e
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    concurrency: build-deploy-test
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run unit tests
+        run: npm test
+      - name: Run INT tests
+        run: npm run test:int
+      - name: Deploy
+        run: npm run deploy
+      - name: Run E2E tests
+        run: npm run test:e2e
