--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "npx sls deploy --conceal",
     "lint": "eslint .",
     "lint:fix": "eslint '**.*.js' --fix",
-    "test": "npm run test:unit",
+    "prettier": "npx prettier --write .",
+    "test": "npm run lint && npm run test:unit",
     "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
     "test:int": "STAGE=dev npx jest int.test --config jest.config.int.js",
     "test:unit": "npx jest unit.test --config jest.config.js"
@@ -32,6 +33,7 @@
     "eslint-plugin-no-only-tests": "^3.0.0",
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
+    "prettier": "^2.7.1",
     "serverless": "^3.23.0",
     "serverless-deployment-bucket": "^1.6.0"
   },
