--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run lint && npm run test:unit",
     "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
     "test:int": "STAGE=dev npx jest int.test --config jest.config.int.js",
-    "test:unit": "npx jest unit.test --config jest.config.js"
+    "test:unit": "npx jest unit.test --config jest.config.js",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-only-tests": "^3.0.0",
+    "husky": "^8.0.1",
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
     "prettier": "^2.7.1",
