--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "husky": "^8.0.1",
     "jest": "^29.2.0",
     "jest-extended": "^3.1.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "serverless": "^3.23.0",
     "serverless-deployment-bucket": "^1.6.0"
@@ -42,5 +43,9 @@
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^3.6.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.{js,md}": "prettier --write --ignore-path .gitignore"
   }
 }
