--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "serverless": "^3.23.0",
-    "serverless-deployment-bucket": "^1.6.0"
+    "serverless-deployment-bucket": "^1.6.0",
+    "serverless-webpack": "^5.10.0"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
