--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@aws-sdk/client-cloudformation": "^3.188.0",
     "axios": "^1.1.3",
+    "esbuild": "^0.17.11",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
