--- a/package.json
+++ b/package.json
@@ -25,27 +25,26 @@
   },
   "homepage": "https://github.com/sls-reference-architectures/javascript-template#readme",
   "devDependencies": {
-    "@aws-sdk/client-cloudformation": "^3.188.0",
-    "axios": "^1.1.3",
+    "@aws-sdk/client-cloudformation": "^3.289.0",
+    "axios": "^1.3.4",
     "esbuild": "^0.17.11",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.25.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-no-only-tests": "^3.0.0",
-    "husky": "^8.0.1",
-    "jest": "^29.2.0",
-    "jest-extended": "^3.1.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "serverless": "^3.23.0",
-    "serverless-deployment-bucket": "^1.6.0",
-    "serverless-webpack": "^5.10.0"
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-extended": "^3.2.4",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.4",
+    "serverless": "^3.28.1",
+    "serverless-deployment-bucket": "^1.6.0"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
-    "@middy/core": "^3.6.1"
+    "@middy/core": "^4.2.6"
   },
   "lint-staged": {
     "*.js": "eslint",
