--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && npm run test:unit",
     "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
     "test:int": "STAGE=dev npx jest int.test --config jest.config.int.js",
-    "test:unit": "npx jest unit.test --config jest.config.js",
+    "test:unit": "npx jest unit.test",
     "prepare": "husky install"
   },
   "repository": {
