Start work on tuning esbuild to llrt; move to v20 runtime

--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,13 @@ provider:
     name: com.reference-architecture.deploys
   logRetentionInDays: 7
   name: aws
-  runtime: nodejs18.x
+  runtime: nodejs20.x
+
+custom:
+  esbuild:
+    bundle: true # DEFAULT
+    minify: false
+    platform: node # DEFAULT
 
 functions:
   hello:
