--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Run E2E tests
         run: npm run test:e2e
         # The following is for my reference architecture stack only
-      - name: Remove stack from AWS
-        run: npx sls remove
+      # - name: Remove stack from AWS
+      #   run: npx sls remove
