--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deploy": "npx sls deploy --conceal",
-    "lint": "eslint .",
-    "lint:fix": "eslint '**.*.js' --fix",
+    "lint": "npx standard --env jest",
+    "lint:fix": "npx standard --env jest --fix",
     "prettier": "npx prettier --write .",
     "test": "npm run lint && npm run test:unit",
     "test:e2e": "STAGE=dev npx jest e2e.test --config jest.config.e2e.js",
@@ -41,14 +41,14 @@
     "prettier": "^3.3.3",
     "serverless": "^3.39.0",
     "serverless-deployment-bucket": "^1.6.0",
-    "serverless-esbuild": "^1.52.1"
+    "serverless-esbuild": "^1.52.1",
+    "standard": "^17.1.2"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
     "@middy/core": "^4.7.0"
   },
   "lint-staged": {
-    "*.js": "eslint",
-    "*.{js,md}": "prettier --write --ignore-path .gitignore"
+    "*.{js}": "npm run lint:fix"
   }
 }
