--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "serverless": "^3.39.0",
-    "serverless-deployment-bucket": "^1.6.0",
-    "serverless-esbuild": "^1.54.5"
+    "serverless": "^4.4.16",
+    "serverless-deployment-bucket": "^1.6.0"
   },
   "dependencies": {
     "@dazn/lambda-powertools-logger": "^1.28.1",
