--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/sls-reference-architectures/javascript-template#readme",
   "devDependencies": {
     "@aws-sdk/client-cloudformation": "^3.772.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "axios": "^1.8.4",
     "esbuild": "^0.25.1",
     "esbuild-jest": "^0.5.0",
