--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "axios": "^1.8.4",
     "esbuild": "^0.25.1",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
