--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@middy/core": "^6.1.6"
   },
   "lint-staged": {
-    "*.{js}": "npm run lint:fix"
+    "*.js": "eslint --cache --fix",
+    "*.{js,md,yml,json}": "npx prettier . --write --ignore-path .gitignore"
   }
 }
