--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@aws-sdk/client-cloudformation": "^3.772.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.24.0",
+    "@swc/core": "^1.11.21",
+    "@swc/jest": "^0.2.37",
     "axios": "^1.8.4",
     "esbuild": "^0.25.1",
-    "esbuild-jest": "^0.5.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
